Fixed: wflow-consoleweb - X-Admin Theme - Unnecessary scrollbar at the bottom of datalists @7.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/xadmin/css/list.css
+++ b/wflow-consoleweb/src/main/webapp/xadmin/css/list.css
@@ -1,5 +1,5 @@
 body .dataList {
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 body .dataList .filters {
     text-align: left;
@@ -87,6 +87,7 @@ body .dataList .actions.bottom {
     margin-bottom: 15px;
     position: relative;
     clear: both;
+    max-width: 98%;
 }
 body .dataList td a.btn-danger{
     background-color: transparent !important;
